fixed bug of footer covering last stock of the list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,7 @@ p {
   
 .collection {
   max-height: 700px;
+  margin-bottom: 150px;
 }  
 
 }
